# priceladder

./: CMakeLists.txt  LICENSE  README.md  conanfile.py  main.cpp  preisleiter.cpp  preisleiter.h  timer_setup_dialog.cpp  timer_setup_dialog.h
build-preisleiter-Desktop_Qt_5_11_2_clang_64bit-Debug/: Makefile  moc_predefs.h  moc_preisleiter.cpp  ui_preisleiter.h
build-preisleiter-Desktop_Qt_5_11_2_clang_64bit-Debug/testTime.app/Contents/: Info.plist
build-preisleiter-Desktop_Qt_5_11_2_clang_64bit-Debug/testTime.app/Contents/MacOS/: testTime
src/: preisleiter.h
trunk/: images.qrc  main.cpp  preisleiter.cpp  preisleiter.h  preisleiter.pro  preisleiter.ui  timersettings.cpp  timersettings.h  timersettings.ui
trunk/preisleiter/: preisleiter.pro
